== Next version

* [#20888] Fixed a bug causing problems with Ruby 1.8.6 at patchlevels around 230.
* Boolean constraints can no longer be specified using the form "bool.must == true". Only the "bool.must_be.true" form can now be used.

== Version 0.8.2
This release adds search statistics along with some new arithmetic constraints 
and channel constraints between boolean and integer variables.

* Wrapping an enumerable that is already wrapped is no longer allowed.
* Added search statistics.
* Added squared value and square root constraints.
* Added channel constraints between single integer variables and boolean variables.
* Added channel constraints between enumerations of boolean variables and single integer variables.

== Version 0.8.1
This release adds tuple constraints along with a couple of minor features. It 
also fixes a bug introduced in the previous version.

* [#19435] Fixed a bug causing inconsistencies during BAB-search. The bug stopped the send+more=money example from working correctly.
* Fixed the "raw_bindings" and "sudoku-set" examples, which were broken by the 0.8.0 release.
* Integers can now be used to specify singleton lower and upper bounds when creating set variables. 
* Added convenience methods Model#maximize! and Model#minimize! for optimizing single variables.
* Added tuple constraints for enumerations of integer and boolean variables.

== Version 0.8.0
This release makes the jump from using Gecode 1.3.1 to using Gecode 2.1.1 . 
The following changes have been made to the interface as a result of the jump.

* Removed the distinct constraint for sets.
* Added the propagation kind option to the non-set constraints.

== Version 0.7.1
This release adds boolean linear constraints.

* Set domain constraints now checks illegal parameters when it's added (rather than when the search begins).
* Added boolean linear constraint.

== Version 0.7.0
This release adds the set selection and operation constraints.
